# nexo

./: .gitignore  Cargo.toml  Rocket.toml  db.sqlite  flake.nix  run-tests.sh
.github/workflows/: test.yml
data/: db.sql
src/: api_utils.rs  crypto.rs  database.rs  login.rs  main.rs
static/: home.html  index.html
tests/: .gitignore  flake.nix
tests/robot/: api_tests.robot  database_tests.robot  resources.robot  server_test.robot  test_suite.robot  ui_tests.robot
