[package]
name = "nexo"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
sha2 = "0.10.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["sqlx_sqlite"]

[profile.release]
opt-level = 3       # Enables aggressive optimizations
debug = false
debug-assertions = false
overflow-checks = false
lto = true         # Link Time Optimizations
panic = 'abort'    # 'abort'|'unwind'
incremental = true
codegen-units = 48  # Parallel codegen units (lower = better optimization, higher = faster compile)

